// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Banner > should be able to render the component using the "error" variant 1`] = `
<div
  class="dusk-banner dusk-banner--error"
>
  <!---->
  <svg
    class="dusk-icon dusk-icon--size--large dusk-banner__icon banner__icon--error"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M23,12L20.56,14.78L20.9,18.46L17.29,19.28L15.4,22.46L12,21L8.6,22.47L6.71,19.29L3.1,18.47L3.44,14.78L1,12L3.44,9.21L3.1,5.53L6.71,4.72L8.6,1.54L12,3L15.4,1.54L17.29,4.72L20.9,5.54L20.56,9.22L23,12M20.33,12L18.5,9.89L18.74,7.1L16,6.5L14.58,4.07L12,5.18L9.42,4.07L8,6.5L5.26,7.09L5.5,9.88L3.67,12L5.5,14.1L5.26,16.9L8,17.5L9.42,19.93L12,18.81L14.58,19.92L16,17.5L18.74,16.89L18.5,14.1L20.33,12M11,15H13V17H11V15M11,7H13V13H11V7"
    />
  </svg>
  
  <!---->
   
  <div>
    <strong
      class="dusk-banner__title"
    >
      Some banner title
    </strong>
     
    <span>
      some text
    </span>
    <!---->
  </div>
</div>
`;

exports[`Banner > should be able to render the component using the "info" variant 1`] = `
<div
  class="dusk-banner dusk-banner--info"
>
  <!---->
  <svg
    class="dusk-icon dusk-icon--size--large dusk-banner__icon banner__icon--info"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M11,15H13V17H11V15M11,7H13V13H11V7M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20Z"
    />
  </svg>
  
  <!---->
   
  <div>
    <strong
      class="dusk-banner__title"
    >
      Some banner title
    </strong>
     
    <span>
      some text
    </span>
    <!---->
  </div>
</div>
`;

exports[`Banner > should be able to render the component using the "success" variant 1`] = `
<div
  class="dusk-banner dusk-banner--success"
>
  <!---->
  <svg
    class="dusk-icon dusk-icon--size--large dusk-banner__icon banner__icon--success"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M23 12L20.6 9.2L20.9 5.5L17.3 4.7L15.4 1.5L12 3L8.6 1.5L6.7 4.7L3.1 5.5L3.4 9.2L1 12L3.4 14.8L3.1 18.5L6.7 19.3L8.6 22.5L12 21L15.4 22.5L17.3 19.3L20.9 18.5L20.6 14.8L23 12M18.7 16.9L16 17.5L14.6 19.9L12 18.8L9.4 19.9L8 17.5L5.3 16.9L5.5 14.1L3.7 12L5.5 9.9L5.3 7.1L8 6.5L9.4 4.1L12 5.2L14.6 4.1L16 6.5L18.7 7.1L18.5 9.9L20.3 12L18.5 14.1L18.7 16.9M16.6 7.6L18 9L10 17L6 13L7.4 11.6L10 14.2L16.6 7.6Z"
    />
  </svg>
  
  <!---->
   
  <div>
    <strong
      class="dusk-banner__title"
    >
      Some banner title
    </strong>
     
    <span>
      some text
    </span>
    <!---->
  </div>
</div>
`;

exports[`Banner > should be able to render the component using the "warning" variant 1`] = `
<div
  class="dusk-banner dusk-banner--warning"
>
  <!---->
  <svg
    class="dusk-icon dusk-icon--size--large dusk-banner__icon banner__icon--warning"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
    />
  </svg>
  
  <!---->
   
  <div>
    <strong
      class="dusk-banner__title"
    >
      Some banner title
    </strong>
     
    <span>
      some text
    </span>
    <!---->
  </div>
</div>
`;

exports[`Banner > should render a warning message if no content is provided for the default slot 1`] = `
<div
  class="dusk-banner dusk-banner--info"
>
  <!---->
  <svg
    class="dusk-icon dusk-icon--size--large dusk-banner__icon banner__icon--info"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M11,15H13V17H11V15M11,7H13V13H11V7M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20Z"
    />
  </svg>
  
  <!---->
   
  <div>
    <strong
      class="dusk-banner__title"
    >
      Some banner title
    </strong>
     
    <p>
      No banner content provided.
    </p>
    <!---->
  </div>
</div>
`;

exports[`Banner > should render the \`Banner\` component 1`] = `
<div
  class="dusk-banner dusk-banner--info"
>
  <!---->
  <svg
    class="dusk-icon dusk-icon--size--large dusk-banner__icon banner__icon--info"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M11,15H13V17H11V15M11,7H13V13H11V7M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20Z"
    />
  </svg>
  
  <!---->
   
  <div>
    <strong
      class="dusk-banner__title"
    >
      Some banner title
    </strong>
     
    <span>
      some text
    </span>
    <!---->
  </div>
</div>
`;
